--- a/src/sass/generic/_app.scss
+++ b/src/sass/generic/_app.scss
@@ -55,3 +55,11 @@ body {
   bottom: 20px;
   right: 10px;
 }
+
+
+.skill-container {
+  span {
+    display: inline-block;
+    margin-right: 10px;
+  }
+}
