--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -9,6 +9,16 @@
     }
 }
 
+.development-skill-container,
+.design-skill-container {
+    svg {
+        margin-right: 20px;
+        width: 50px;
+        height: 50px;
+
+        fill: #f0e8e3;
+    }
+}
 
 @media (min-width: 30em) {
 
