--- a/src/sass/generic/_app.scss
+++ b/src/sass/generic/_app.scss
@@ -37,23 +37,38 @@
   }
 }
 
-
+// ------------------------------------------------
 
 // 自己写的
 body {
-  background-color: #98A896;
+    background-color: #98A896;
 }
 
 .site-container {
-  max-width: 1400px;
-  margin: auto;
-  width: 95%;
+    max-width: 1400px;
+    margin: auto;
+    width: 95%;
 }
 
+
+// back to top button
 .back-to-top {
-  position: fixed;
-  bottom: 20px;
-  right: 10px;
+    margin: auto;
+    margin-top: 100px;
+    cursor: pointer;
+    width: 35px;
+    height: 35px;
+
+    svg {
+        width: 100%;
+        height: 100%;
+
+        fill: brown;
+    }
+
+    &.none {
+        display: none;
+    }
 }
 
 
@@ -63,3 +78,4 @@ body {
     margin-right: 10px;
   }
 }
+
