added style to Single Page, changed the projects layout in Home Page

--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -1,3 +1,10 @@
 .footer-container {
     text-align: center;
+    padding: 70px 0;
+}
+
+@media (min-width: 45em) {
+    .footer-container {
+        padding-bottom: 0;
+    }
 }
