--- a/src/sass/components/_no-slider-projects.scss
+++ b/src/sass/components/_no-slider-projects.scss
@@ -6,28 +6,51 @@
     row-gap: 70px;
 
     .project-card {
-        max-width: 500px;
-        background-color: #fff;
-        color: rgba(0, 0, 0, 0.87);
-        border-radius: 5px;
-        box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
-        overflow: hidden;
-    }
+    //     max-width: 500px;
+    //     background-color: #fff;
+    //     color: rgba(0, 0, 0, 0.87);
+    //     border-radius: 5px;
+    //     box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
+    //     overflow: hidden;
+    // }
 
-    .card-content {
-        padding: 16px;
+    // .card-content {
+    //     padding: 16px;
+
+        img {
+            width: 100%;
+            border-radius: 10px;
+        }
     }
 }
 
 
-@media (min-width: 30em) {
+@media (min-width: 55em) {
     .no-slider-container {
 
-        display: grid;
-        justify-items: center;
-        row-gap: 70px;
-        column-gap: 35px;
-        grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        // justify-items: center;
+        // row-gap: 70px;
+        // column-gap: 35px;
+        // grid-template-columns: repeat(auto-fill, minmax(375px, 1fr));
+
+        .project-card {
+            display: flex;
+            // gap: 3rem;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .project-card:nth-child(even) .card-content {
+            order: -1; /* 使偶数项的内容先显示在左侧 */
+          }
+
+        img {
+            max-width: 55%;
+        }
+
 
     }
 }
