--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,4 +1,7 @@
+
 .header-container {
+    position: relative;
+
     .site-navigation {
         position: fixed;
         bottom: 0;
@@ -8,7 +11,7 @@
         // height: 70px;
         padding: 10px 0;
         width: 100%;
-        background-color: #3C5A58;
+        background-color: #50555c;
         text-align: center;
         z-index: 1000;
 
@@ -68,10 +71,17 @@
 
 @media (min-width: 45em) {
     .header-container {
+        margin-bottom: 20px;
+
+
         .site-navigation {
             position: unset;
             transform: none;
             background-color: unset;
+
+            .header-logo {
+                position: static;
+            }
 
             ul {
 
