--- a/src/sass/generic/_app.scss
+++ b/src/sass/generic/_app.scss
@@ -40,24 +40,29 @@
 // ------------------------------------------------
 
 // 自己写的
-body {
-    background-color: #98A896;
-}
+// body {
+//     background-color: #98A896;
+// }
 
-.site-container {
-    max-width: 1400px;
-    margin: auto;
-    width: 95%;
-}
+// .site-container {
+//     max-width: 1400px;
+//     margin: auto;
+//     width: 95%;
+// }
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
 // back to top button
 .back-to-top {
-    margin: auto;
-    margin-top: 100px;
+    position: fixed;
+    right: 8px;
+    bottom: 80px;
+    // margin: auto;
+    // margin-top: 100px;
     cursor: pointer;
-    width: 35px;
-    height: 35px;
+    width: 25px;
+    height: 25px;
 
     svg {
         width: 100%;
