--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -46,4 +46,9 @@
 @use "components/no-slider-projects";
 @use "components/features";
 @use "components/about";
+@use "components/banner";
+@use "components/single-project";
+@use "components/contact";
+@use "components/home";
+
 
