--- a/src/sass/components/_home.scss
+++ b/src/sass/components/_home.scss
@@ -1,7 +1,7 @@
 .content-container {
-    max-width: 1200px;
-    margin: 33px auto;
-    width: 80%;
+    // max-width: 1200px;
+    // margin: 33px auto;
+    // width: 80%;
 
 
     h2 {
