--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,28 +1,35 @@
-.css-heg063-MuiTabs-flexContainer {
-    flex-direction: column;
-}
-
-.css-13xfq8m-MuiTabPanel-root {
-    p {
-        display: inline-block;
-        margin-right: 15px;
-    }
-}
-
-.development-skill-container,
-.design-skill-container {
-    svg {
-        margin-right: 20px;
-        width: 50px;
-        height: 50px;
-
-        fill: #dd7d41;
-    }
-}
-
-@media (min-width: 30em) {
+.about-container {
+    max-width: 1200px;
+    margin: 100px auto;
+    width: 80%;
 
     .css-heg063-MuiTabs-flexContainer {
-        flex-direction: row;
+        flex-direction: column;
     }
+
+    .css-13xfq8m-MuiTabPanel-root {
+        p {
+            display: inline-block;
+            margin-right: 15px;
+        }
+    }
+
+    .development-skill-container,
+    .design-skill-container {
+        svg {
+            margin-right: 20px;
+            width: 50px;
+            height: 50px;
+
+            fill: #dd7d41;
+        }
+    }
+
+    @media (min-width: 30em) {
+
+        .css-heg063-MuiTabs-flexContainer {
+            flex-direction: row;
+        }
+    }
+
 }
