--- a/src/sass/components/_project-slider.scss
+++ b/src/sass/components/_project-slider.scss
@@ -4,7 +4,7 @@
 
     .slick-slide > div {
         width: 230px;
-        height: 400px;
+        height: 350px;
         background-color: #fff;
         border-radius: 4px;
         box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 1px 3px 0px rgba(0,0,0,0.12);
@@ -13,10 +13,18 @@
     }
 
     .project-card {
+
+        .image-container {
+            width: 100%;
+        }
     
         img {
             width: 100%;
             object-fit: cover;
+        }
+
+        p {
+            display: none;
         }
     }
 
@@ -63,7 +71,7 @@
     .slider-container {
         .slick-slide > div {
             width: 350px;
-            height: 450px;
+            height: 500px;
         }
 
         .slick-prev {
@@ -78,6 +86,12 @@
         .slick-next {
             width: 40px;
             height: 40px;
+        }
+
+        .project-card {
+            p {
+                display: block;
+            }
         }
     }
 }
