--- a/src/sass/generic/_app.scss
+++ b/src/sass/generic/_app.scss
@@ -50,6 +50,7 @@
 //     width: 95%;
 // }
 
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 
@@ -82,5 +83,9 @@
     display: inline-block;
     margin-right: 10px;
   }
+}
+
+body {
+  background-color: rgb(250, 250, 250);
 }
 
