--- a/src/sass/components/_project-slider.scss
+++ b/src/sass/components/_project-slider.scss
@@ -1,3 +1,5 @@
+@import '../generic/mixins';
+
 .slider-container {
     max-width: 500px;
     margin: auto;
@@ -67,7 +69,7 @@
     
 }
 
-@media (min-width: 55em) {
+@include mqMin(55em) {
     .slider-container {
         .slick-slide > div {
             width: 350px;
