--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -1,4 +1,5 @@
 @import '../generic/mixins';
+@import '../generic/variables';
 
 .header-container {
     position: relative;
@@ -12,7 +13,7 @@
         // height: 70px;
         padding: 10px 0;
         width: 100%;
-        background-color: #50555c;
+        background-color: $bgc-brown;
         text-align: center;
         z-index: 1000;
 
@@ -39,11 +40,6 @@
             color: #333;
         }
 
-        .active-link {
-            font-weight: bold; 
-            color: blue; 
-        }
-
         li a {
             display: flex;
             flex-direction: column;
@@ -58,14 +54,23 @@
                     width: 100%;
                     height: 100%;
 
-                    fill: rgb(224, 218, 218);
+                    fill: rgb(179, 176, 176);
                 }
             }
         }
 
-        // li span {
-        //     font-size: 20px;
-        // }
+        .active-link {
+            font-weight: bold; 
+            color: $content-nav;
+
+            .nav-icon {
+
+                svg {
+                    fill: $content-nav;
+                }
+            }
+        }
+
     }
 }
 
