--- a/src/sass/generic/_variables.scss
+++ b/src/sass/generic/_variables.scss
@@ -1,12 +1,12 @@
 // Colors
-$bgc: #ffffff;
+$content-nav: #859e91;
+$bgc-brown: #f7f4f2;
 $btnColor: #e68e00;
 $textC: #242424;
 $bgShop: #999999ab;
 
 // Fonts
 $fontsize: 1.5rem;
-$btn-text-color: $bgc;
 $content-title: #4e4e4e;
 $content-color: #908b8b;
 
