changed the style on home project section

--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -1,7 +1,7 @@
 .banner-container {
     min-height: 700px;
     // background: #001224;
-    background: #6389b0;
+    // background: #6389b0;
     display: flex;
     flex-direction: column;
     justify-content: center;
