--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -35,7 +35,7 @@
 @use "generic/normalize-fwd";
 @use "generic/typography";
 @use "generic/variables";
-// @use "generic/mixins";
+@use "generic/mixins";
 
 
 /*--------------------------------------------------------------
