--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -1,4 +1,5 @@
 @import '../generic/mixins';
+@import '../generic/variables';
 
 
 .about-container {
@@ -24,8 +25,17 @@
             width: 50px;
             height: 50px;
 
-            fill: #dd7d41;
+            fill: $bgc-skill;
         }
+    }
+
+    .css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected {
+        color: white;
+        background-color: $bgc-blue;
+    }
+
+    .css-1aquho2-MuiTabs-indicator {
+        color: $bgc-blue;
     }
 
     @include mqMin(30em) {
