--- a/src/sass/generic/_global.scss
+++ b/src/sass/generic/_global.scss
@@ -1,5 +1,8 @@
-body {
-    background-color: rgb(250, 250, 250);
+main {
+//     // background-color: rgb(250, 250, 250);
+//     background-color: white;
+
+  margin-top: 80px;
 }
 
 
@@ -26,8 +29,18 @@ body {
 
 
 .skill-container {
-  span {
-    display: inline-block;
-    margin-right: 10px;
-  }
+	span {
+		display: inline-block;
+		margin-right: 10px;
+	}
+}
+
+a {
+	display: block;
+	color: black;
+	background-color: #ede6d9;
+	border-color: #ede6d9;
+	width: 110px;
+	height: 30px;
+	border-radius: 30px;
 }
