--- a/src/sass/generic/_variables.scss
+++ b/src/sass/generic/_variables.scss
@@ -1,9 +1,11 @@
 // Colors
 $content-nav: #859e91;
-$bgc-brown: #f7f4f2;
+$bgc-brown: #f4f3ee;
+$bgc-blue: #537355;
 $btnColor: #e68e00;
 $textC: #242424;
 $bgShop: #999999ab;
+$bgc-skill: #6099A6;
 
 // Fonts
 $fontsize: 1.5rem;
