--- a/src/sass/generic/_variables.scss
+++ b/src/sass/generic/_variables.scss
@@ -1,14 +1,19 @@
+// $content-nav: #859e91;
+// $bgc-brown: #f4f3ee;
+// $textC: #242424;
+// $bgShop: #999999ab;
+
+
+
 // Colors
-$content-nav: #859e91;
-$bgc-brown: #f4f3ee;
-$bgc-blue: #537355;
-$btnColor: #e68e00;
-$textC: #242424;
-$bgShop: #999999ab;
-$bgc-skill: #6099A6;
+$bgc-body: #0f0f0f;
+$content: #fff;
+$bgc-btn: #4FD1C5;
 
 // Fonts
-$fontsize: 1.5rem;
-$content-title: #4e4e4e;
-$content-color: #908b8b;
+// $fontsize: 1.5rem;
+// $content-title: #4e4e4e;
+// $content-color: #908b8b;
 
+// Screen size
+$tablet-small: 45em;
