--- a/src/sass/components/_about.scss
+++ b/src/sass/components/_about.scss
@@ -25,17 +25,17 @@
             width: 50px;
             height: 50px;
 
-            fill: $bgc-skill;
+            fill: $bgc-btn;
         }
     }
 
     .css-1h9z7r5-MuiButtonBase-root-MuiTab-root.Mui-selected {
-        color: white;
-        background-color: $bgc-blue;
+        color: $content;
+        background-color: $bgc-body;
     }
 
     .css-1aquho2-MuiTabs-indicator {
-        color: $bgc-blue;
+        color: $bgc-body;
     }
 
     @include mqMin(30em) {
