--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -1,20 +1,21 @@
+@import '../generic/variables';
+
 .contact-container {
-    height: 500px;
-    background-size: cover;
-    background-position: center;
-    background:
-        /* top, transparent black, faked with gradient */ 
-        linear-gradient(
-          rgba(0, 0, 0, 0.7), 
-          rgba(0, 0, 0, 0.7)
-        ),
-        /* bottom, image */
-        url(../../images/contact.jpg);
+    height: 100vh;
+    background-color: $bgc-body;
+    position: relative;
     
     .contact-info {
+        position: absolute;
+        top: 50%;
+        left: 50%; 
+        transform: translate(-50%, -50%);
         max-width: 1200px;
-        margin: auto;
+        padding: 70px;
         width: 80%;
-        height: 80%;
+        height: 60%;
+        border-radius: 26px;
+        background: linear-gradient(86.26deg, rgba(28, 29, 33, .98) 61.1%, rgba(28, 29, 33, .392) 76.93%) ;
+        border: 1px solid #26272c;
     }
 }
