--- a/src/sass/generic/_global.scss
+++ b/src/sass/generic/_global.scss
@@ -1,46 +1,52 @@
-main {
-//     // background-color: rgb(250, 250, 250);
-//     background-color: white;
+// @import 'mixins';
+@import 'variables';
 
-  margin-top: 80px;
+body {
+    background-color: $bgc-body;
+    color: $content;
+    // margin-top: 80px;
+}
+
+a {
+    color: $content;
 }
 
 
 // back to top button
-.back-to-top {
-    position: fixed;
-    right: 8px;
-    bottom: 80px;
-    cursor: pointer;
-    width: 25px;
-    height: 25px;
+// .back-to-top {
+//     position: fixed;
+//     right: 8px;
+//     bottom: 80px;
+//     cursor: pointer;
+//     width: 25px;
+//     height: 25px;
 
-    svg {
-        width: 100%;
-        height: 100%;
+//     svg {
+//         width: 100%;
+//         height: 100%;
 
-        fill: brown;
-    }
+//         fill: brown;
+//     }
 
-    &.none {
-        display: none;
-    }
-}
+//     &.none {
+//         display: none;
+//     }
+// }
 
 
-.skill-container {
-	span {
-		display: inline-block;
-		margin-right: 10px;
-	}
-}
+// .skill-container {
+// 	span {
+// 		display: inline-block;
+// 		margin-right: 10px;
+// 	}
+// }
 
-a {
-	display: block;
-	color: black;
-	background-color: #ede6d9;
-	border-color: #ede6d9;
-	width: 110px;
-	height: 30px;
-	border-radius: 30px;
-}
+// a {
+// 	display: block;
+// 	color: black;
+// 	background-color: #ede6d9;
+// 	border-color: #ede6d9;
+// 	width: 110px;
+// 	height: 30px;
+// 	border-radius: 30px;
+// }
