--- a/src/sass/generic/_mixins.scss
+++ b/src/sass/generic/_mixins.scss
@@ -6,22 +6,22 @@
 }
 
 // Mixin: absolute horizontally centered
-@mixin centerAbsolute {
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%, -50%);
+// @mixin centerAbsolute {
+//     position: absolute;
+//     left: 50%;
+//     transform: translate(-50%, -50%);
   
-}
+// }
 
 
 
 // Title styles
-@mixin title-styles {
-    text-align: center;
-    font-weight: 100;
-    font-size: 2rem;
-    margin: 0 0 1em 0;
-    color: $content-color;
-    text-transform: uppercase;
+// @mixin title-styles {
+//     text-align: center;
+//     font-weight: 100;
+//     font-size: 2rem;
+//     margin: 0 0 1em 0;
+//     color: $content-color;
+//     text-transform: uppercase;
   
-}
+// }
