changed banner style

--- a/src/sass/generic/_variables.scss
+++ b/src/sass/generic/_variables.scss
@@ -6,10 +6,10 @@
 
 
 // Colors
-$bgc-body: #0f0f0f;
+$bgc-body: #21272E;
 $content: #fff;
 $bgc-btn: #4FD1C5;
-
+$bgc-navbar: #2e353dde;
 // Fonts
 // $fontsize: 1.5rem;
 // $content-title: #4e4e4e;
