--- a/src/sass/components/_banner.scss
+++ b/src/sass/components/_banner.scss
@@ -1,20 +1,69 @@
-.banner-container {
-    min-height: 700px;
-    // background: #001224;
-    // background: #6389b0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-      
-      p {
-        font-size: clamp(2rem, 10vw, 5.5rem);
-        margin: 0;
-        font-weight: bold;
-        text-align: center;
-        color: white;
-      }
+@import '../generic/variables';
+@import '../generic/mixins';
 
-      .my-role {
-        font-size: 2rem;
-      }
+.banner-container {
+    display: flex;
+    flex-wrap: wrap;
+    height: 100vh;
+    width: 90%;
+    margin: auto;
+
+    .background-img {
+        margin-left: auto;
+        margin-top: auto; 
+        filter: blur(5px);
+        transform: rotate(-20deg);
+        height: 20%;
+    }
+
+    .intro {
+        margin: 15px;
+        height: 65%;
+        
+        p {
+            font-size: clamp(1.3rem, 5vw, 2.5rem);
+        }
+
+        .green {
+            color: $bgc-btn;
+            font-weight: bold;
+        }
+
+        .gray {
+            color: #cfcfcf;
+        }
+
+        .green,
+        .gray {
+            transition: color 0.5s ease-in-out; 
+        }
+
+        .cta-button {
+            span {
+
+                margin-right: 10px;
+            }
+
+            svg {
+                vertical-align: middle;
+            }
+    
+        }
+    }
+
+    @include mqMin(45em) {
+        max-width: 1200px;
+        width: 80%;
+
+        .background-img {
+            transform: rotate(-10deg);
+            height: 5%;
+        }
+    
+        .intro {
+            height: 65%;
+            margin-top: auto;
+        }
+    }
+
 }
