--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -10,6 +10,17 @@
         height: 70px;
         padding: 20px;
         margin: 0 auto;
+
+        svg {
+            width: 100%;
+            height: 100%;
+            transition: 0.3s ease-in-out;
+
+            &:hover path {
+                fill: $bgc-btn;
+                stroke: $bgc-btn;
+            }
+        }
     }
 
     p {
