--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -9,6 +9,17 @@
         height: 70px;
         padding: 20px;
         margin: 0 auto;
+
+        svg {
+            width: 100%;
+            height: 100%;
+            transition: 0.3s ease-in-out;
+
+            &:hover path {
+                fill: $bgc-btn;
+                stroke: $bgc-btn;
+            }
+        }
     }
 
     .site-navigation {
@@ -18,11 +29,12 @@
         transform: translateX(-50%);
         width: 100%;
         z-index: 2000;
-        border: 1px solid #26272c;
+        border: 1px solid rgb(62 72 83 / 44%);
         border-top-left-radius: 10px;
         border-top-right-radius: 10px;        
-        box-shadow: 2px 0px 12px rgba(0, 0, 0, 0.08);
-        background: rgba(28, 29, 33, 0.904);
+        box-shadow: 0 -2px 12px $bgc-navbar;
+        background: $bgc-navbar;
+        backdrop-filter: blur(5px);
         padding: 15px 10px;
     
         ul {
@@ -40,6 +52,7 @@
                 justify-items: center;
                 align-items: center;
                 font-size: 12px;
+                transition: 0.2s ease;
 
                 &:hover {
                     color: $bgc-btn;
@@ -83,6 +96,7 @@
             position: unset;
             transform: none; 
             width: auto; 
+            box-shadow: 0px 0px 20px 0px $bgc-navbar;
             border-radius: 10px;
             padding: 5px 20px 5px 20px;
             
