--- a/src/sass/generic/_variables.scss
+++ b/src/sass/generic/_variables.scss
@@ -9,7 +9,9 @@
 $bgc-body: #21272E;
 $content: #fff;
 $bgc-btn: #4FD1C5;
+$bgc-btn-yellow: #f4a949;
 $bgc-navbar: #2e353dde;
+
 // Fonts
 // $fontsize: 1.5rem;
 // $content-title: #4e4e4e;
