--- a/src/sass/components/_contact.scss
+++ b/src/sass/components/_contact.scss
@@ -1,21 +1,22 @@
+@import '../generic/mixins';
 @import '../generic/variables';
 
 .contact-container {
-    height: 100vh;
-    background-color: $bgc-body;
-    position: relative;
+    @include cardBackground;
+    // height: 100vh;
+    // position: relative;
     
     .contact-info {
-        position: absolute;
-        top: 50%;
-        left: 50%; 
-        transform: translate(-50%, -50%);
-        max-width: 1200px;
-        padding: 70px;
-        width: 80%;
-        height: 60%;
-        border-radius: 26px;
-        background: linear-gradient(86.26deg, rgba(28, 29, 33, .98) 61.1%, rgba(28, 29, 33, .392) 76.93%) ;
-        border: 1px solid #26272c;
+        // position: absolute;
+        // top: 50%;
+        // left: 50%; 
+        // transform: translate(-50%, -50%);
+        // max-width: 1200px;
+        // padding: 70px;
+        // width: 80%;
+        // height: 60%;
+        // border-radius: 26px;
+        // background: linear-gradient(86.26deg, rgba(28, 29, 33, .98) 61.1%, rgba(28, 29, 33, .392) 76.93%) ;
+        // border: 1px solid #26272c;
     }
 }
