--- a/src/sass/components/_header.scss
+++ b/src/sass/components/_header.scss
@@ -34,7 +34,7 @@
         border-top-right-radius: 10px;        
         box-shadow: 0 -2px 12px $bgc-navbar;
         background: $bgc-navbar;
-        backdrop-filter: blur(10px);
+        backdrop-filter: blur(5px);
         padding: 15px 10px;
     
         ul {
@@ -77,7 +77,7 @@
         }
     }
     
-    @include mqMin(45em) {
+    @include mqMin($tablet-small) {
         position: fixed;
         display: flex;
         justify-content: space-between; 
@@ -86,7 +86,7 @@
         left: 50%;
         transform: translateX(-50%);
         width: 90%;
-        max-width: 1200px;
+        max-width: 1400px;
         
         .site-logo-container {
             margin: 0;
