--- a/src/sass/generic/_global.scss
+++ b/src/sass/generic/_global.scss
@@ -5,7 +5,57 @@ body {
     background-color: $bgc-body;
     color: $content;
     // margin-top: 80px;
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // width: 100%;
+    // height: 100%;
+    // pointer-events: none;
 }
+
+
+.star {
+    position: absolute;
+    width: 2px; /* 星星的宽度 */
+    height: 2px; /* 星星的高度 */
+    background-color: white; /* 星星的颜色 */
+    border-radius: 50%; /* 将方块变为圆形，实现星星的效果 */
+    filter: blur(1px);
+  }
+  
+  .site-container {
+    position: relative; /* 相对定位，使星星能够根据该容器进行绝对定位 */
+  }
+  
+  .stars {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    pointer-events: none; /* 允许点击事件穿透 */
+    z-index: -1000;
+  }
+
+// body::before {
+//     content: "";
+//     position: absolute;
+//     top: 0;
+//     left: 0;
+//     width: 100%;
+//     height: 100%;
+//     background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 1600 900"><circle cx="50%" cy="50%" r="1" fill="white"/><circle cx="40%" cy="80%" r="1" fill="white"/><circle cx="30%" cy="50%" r="1" fill="white"/><circle cx="20%" cy="70%" r="1" fill="white"/><circle cx="15%" cy="20%" r="1" fill="white"/><circle cx="10%" cy="90%" r="1" fill="white"/><circle cx="70%" cy="30%" r="1" fill="white"/><circle cx="80%" cy="85%" r="1" fill="white"/><circle cx="90%" cy="10%" r="1" fill="white"/><circle cx="60%" cy="60%" r="1" fill="white"/></svg>');
+//     animation: animateStars 50s linear infinite;
+// }
+
+// @keyframes animateStars {
+//     from {
+//         transform: translateY(0);
+//     }
+//     to {
+//         transform: translateY(-100%);
+//     }
+// }
 
 a {
     color: $content;
